[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "compiler"
path = "src/main.rs"

[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
cranelift = "0.113.0"
cranelift-codegen = "0.113.0"
cranelift-frontend = "0.113.0"
cranelift-module = "0.113.0"
cranelift-native = "0.113.0"
cranelift-object = "0.113.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.66"

[dev-dependencies]
compiler = { path = "." }

